--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,7 +26,7 @@ jobs:
 
         - name: Run tests
           run: |
-            pytest tests/
+            pytest 
     
     
     build-and-publish:
@@ -50,3 +50,5 @@ jobs:
             context: .
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/netflix-recommendation-system:latest
+
+    
