--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ main_data.csv
 # tranform.pkl  <-- Removed to keep tracking transform.pkl
 # nlp_model.pkl  <-- Removed to keep tracking nlp_model.pkl
 
+azure.txt
