Update: added main_data.csv to ci/cd

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,54 +1,57 @@
-name : CI/CD for Netflix Recommendation System
+name: CI/CD for Netflix Recommendation System
 
 on:
-    push:
-        branches:
-        - main
-    pull_request:
-        branches:
-        - main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-    build-and-test:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-        - name: Set up Python
-          uses: actions/setup-python@v2
-          with:
-            python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
 
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-        - name: Run tests
-          run: |
-            pytest 
-    
-    
-    build-and-publish:
-        runs-on: ubuntu-latest
-        needs: build-and-test
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
+      - name: Run tests
+        run: |
+          pytest
 
-        - name: Set Docker Buildx
-          uses: docker/setup-buildx-action@v1
-        
-        - name: Login to Docker Hub
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v2
-          with:
-            context: .
-            push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/netflix-recommendation-system:latest
+  build-and-publish:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    
+      - name: Download main_data.csv from Google Drive
+        run: |
+          curl -L "https://drive.google.com/uc?export=download&id=1m_L6EIdE6s2YHaic4e7eadRPNP0gtY4b" -o main_data.csv
+
+      - name: Set Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/netflix-recommendation-system:latest
